// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTabbedContent is rendered with required props and tabs 1`] = `
<div
  aria-label="aria-label"
  class="testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiTabs emotion-euiTabs-m-bottomBorder"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="euiTab euiTab-isSelected emotion-euiTab-selected"
      id="es"
      role="tab"
      tabindex="0"
      type="button"
    >
      <span
        class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="euiTab kibanaTab emotion-euiTab"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      tabindex="-1"
      type="button"
    >
      <span
        class="euiTab__prepend"
      >
        prepend
      </span>
      <span
        class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
      >
        <strong>
          Kibana
        </strong>
      </span>
      <span
        class="euiTab__append"
      >
        append
      </span>
    </button>
  </div>
  <div
    aria-labelledby="es"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Elasticsearch content
    </p>
  </div>
</div>
`;

exports[`EuiTabbedContent props autoFocus initial is rendered 1`] = `
<div>
  <div
    class="euiTabs emotion-euiTabs-m-bottomBorder"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="euiTab euiTab-isSelected emotion-euiTab-selected"
      id="es"
      role="tab"
      tabindex="0"
      type="button"
    >
      <span
        class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="euiTab kibanaTab emotion-euiTab"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      tabindex="-1"
      type="button"
    >
      <span
        class="euiTab__prepend"
      >
        prepend
      </span>
      <span
        class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
      >
        <strong>
          Kibana
        </strong>
      </span>
      <span
        class="euiTab__append"
      >
        append
      </span>
    </button>
  </div>
  <div
    aria-labelledby="es"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Elasticsearch content
    </p>
  </div>
</div>
`;

exports[`EuiTabbedContent props autoFocus selected is rendered 1`] = `
<div>
  <div
    class="euiTabs emotion-euiTabs-m-bottomBorder"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="euiTab euiTab-isSelected emotion-euiTab-selected"
      id="es"
      role="tab"
      tabindex="0"
      type="button"
    >
      <span
        class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="euiTab kibanaTab emotion-euiTab"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      tabindex="-1"
      type="button"
    >
      <span
        class="euiTab__prepend"
      >
        prepend
      </span>
      <span
        class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
      >
        <strong>
          Kibana
        </strong>
      </span>
      <span
        class="euiTab__append"
      >
        append
      </span>
    </button>
  </div>
  <div
    aria-labelledby="es"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Elasticsearch content
    </p>
  </div>
</div>
`;

exports[`EuiTabbedContent props initialSelectedTab renders a selected tab 1`] = `
<div>
  <div
    class="euiTabs emotion-euiTabs-m-bottomBorder"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="euiTab emotion-euiTab"
      id="es"
      role="tab"
      tabindex="-1"
      type="button"
    >
      <span
        class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="euiTab kibanaTab euiTab-isSelected emotion-euiTab-selected"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      tabindex="0"
      type="button"
    >
      <span
        class="euiTab__prepend"
      >
        prepend
      </span>
      <span
        class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
      >
        <strong>
          Kibana
        </strong>
      </span>
      <span
        class="euiTab__append"
      >
        append
      </span>
    </button>
  </div>
  <div
    aria-labelledby="kibana"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Kibana content
    </p>
  </div>
</div>
`;

exports[`EuiTabbedContent props selectedTab renders a selected tab 1`] = `
<div>
  <div
    class="euiTabs emotion-euiTabs-m-bottomBorder"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="euiTab emotion-euiTab"
      id="es"
      role="tab"
      tabindex="-1"
      type="button"
    >
      <span
        class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="euiTab kibanaTab euiTab-isSelected emotion-euiTab-selected"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      tabindex="0"
      type="button"
    >
      <span
        class="euiTab__prepend"
      >
        prepend
      </span>
      <span
        class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
      >
        <strong>
          Kibana
        </strong>
      </span>
      <span
        class="euiTab__append"
      >
        append
      </span>
    </button>
  </div>
  <div
    aria-labelledby="kibana"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Kibana content
    </p>
  </div>
</div>
`;

exports[`EuiTabbedContent props size can be small 1`] = `
<div>
  <div
    class="euiTabs emotion-euiTabs-s-bottomBorder"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="euiTab euiTab-isSelected emotion-euiTab-selected"
      id="es"
      role="tab"
      tabindex="0"
      type="button"
    >
      <span
        class="euiTab__content eui-textTruncate emotion-euiTab__content-s"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="euiTab kibanaTab emotion-euiTab"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      tabindex="-1"
      type="button"
    >
      <span
        class="euiTab__prepend"
      >
        prepend
      </span>
      <span
        class="euiTab__content eui-textTruncate emotion-euiTab__content-s"
      >
        <strong>
          Kibana
        </strong>
      </span>
      <span
        class="euiTab__append"
      >
        append
      </span>
    </button>
  </div>
  <div
    aria-labelledby="es"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Elasticsearch content
    </p>
  </div>
</div>
`;
